--- a/new-dashboard/Elearning.html
+++ b/new-dashboard/Elearning.html
@@ -70,7 +70,15 @@
                             <li><a href="#">LOGalleries</a></li>
                             <li><a href="#">LOLinks</a></li>
                             <li><a href="#">LOVideos</a></li>
-                            <li><a href="#">Authors</a></li>
+                            <li><a href="#">Authors</a></li>                        
+                        </ol>
+                    </div>
+                </div>
+            </nav>
+            <nav class="cm-navbar cm-navbar-default cm-navbar-slideup">
+                <div class="cm-flex">
+                    <div class="cm-breadcrumb-container">
+                        <ol class="breadcrumb">
                             <li><a href="#">LOComments</a></li>
                             <li><a href="#">LOFeedbacks</a></li>
                             <li><a href="#">LORatings</a></li>
