--- a/new-dashboard/Community.html
+++ b/new-dashboard/Community.html
@@ -22,7 +22,7 @@
                         <ul class="cm-menu-items">
                             <li><a href="Home.html">Home</a></li>
                             <li><a href="Posts.html">Posts</a></li>
-                            <li><a href="Contents.html">Contents</a></li>
+                            <li><a href="Contents-Fiesta.html">Contents</a></li>
                             <li><a href="Pages.html">Pages</a></li>
                             <li><a href="Users.html">Users</a></li>
                             <li><a href="Analytics.html">Analytics</a></li>
@@ -77,7 +77,7 @@
         <div id="global">
             <div class="container-fluid">
             </div>
-            <footer class="cm-footer"><span class="pull-left">Connected as John Smith</span><span class="pull-right">&copy; PAOMEDIA SARL</span></footer>
+            <footer class="cm-footer"><span class="pull-left">Connected as USERNAME</span><span class="pull-right">&copy; PAOMEDIA SARL</span></footer>
         </div>
         <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
         <script src="assets/js/jquery.mousewheel.min.js"></script>
